--- a/package.json
+++ b/package.json
@@ -15112,6 +15112,7 @@
     "@angular/router": "^19.0.1",
     "@ngneat/elf": "^2.5.1",
     "@ngneat/elf-entities": "^5.0.2",
+    "rxjs": "^7.8.1",
     "typescript": "~5.6.2",
     "zone.js": "^0.15.0"
   },
