--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "lockfileVersion": 3,
   "requires": true,
   "scripts": {
-    "start": "ng serve"
+    "start": "ng serve",
+    "build": "ng build"
   },
   "packages": {
     "": {
@@ -15107,11 +15108,13 @@
     "@angular/compiler": "^19.0.1",
     "@angular/compiler-cli": "^19.0.1",
     "@angular/core": "^19.0.1",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^19.0.1",
     "@angular/platform-browser": "^19.0.1",
     "@angular/router": "^19.0.1",
     "@ngneat/elf": "^2.5.1",
     "@ngneat/elf-entities": "^5.0.2",
+    "firebase-tools": "^13.29.1",
     "rxjs": "^7.8.1",
     "typescript": "~5.6.2",
     "zone.js": "^0.15.0"
