added a deploy command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "requires": true,
   "scripts": {
     "start": "ng serve",
-    "build": "ng build"
+    "build": "ng build",
+    "firebase:deploy": "ng build --configuration production && firebase deploy"
   },
   "packages": {
     "": {
