--- a/package.json
+++ b/package.json
@@ -15114,6 +15114,7 @@
     "@angular/platform-browser": "^19.0.1",
     "@angular/router": "^19.0.1",
     "@ng-select/ng-select": "^14.1.0",
+    "@ngneat/dialog": "^5.1.2",
     "@ngneat/elf": "^2.5.1",
     "@ngneat/elf-entities": "^5.0.2",
     "firebase-tools": "^13.29.1",
