--- a/package.json
+++ b/package.json
@@ -15117,6 +15117,7 @@
     "@ngneat/dialog": "^5.1.2",
     "@ngneat/elf": "^2.5.1",
     "@ngneat/elf-entities": "^5.0.2",
+    "@ngrx/signals": "^19.0.0",
     "firebase-tools": "^13.29.1",
     "rxjs": "^7.8.1",
     "typescript": "~5.6.2",
